--- a/style.css
+++ b/style.css
@@ -2,14 +2,14 @@ body{
     background-image: url("img/back.png");
     background-repeat: no-repeat;
     background-size: cover;
-    
+    margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .floating_window{
     position: absolute;
-    top: 100px;
-    left: 500px;
+    top: 10vh;
+    left: 30vw;
     z-index: 1;
     width: 800px;
     height: 600px;
@@ -18,6 +18,7 @@ body{
     background-color: rgba(212, 232, 255, 0.3);
     border-radius: 10px;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3), 5px 5px 5px rgba(0, 0, 0, 0.3) inset;
+    backdrop-filter: blur(2px);
     overflow: hidden;
     display: flex;
     justify-content: center;
