--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body{
     min-height: fit-content;
     background-color: rgba(212, 232, 255, 0.3);
     border-radius: 10px;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3), 5px 5px 5px rgba(0, 0, 0, 0.3) inset;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.3), 5px 5px 5px rgba(26, 26, 26, 0.3) inset;
     backdrop-filter: blur(2px);
     overflow: hidden;
     display: flex;
@@ -77,6 +77,7 @@ body{
     height: 50px;
     width: 50px;
     margin: 30px;
+    margin-bottom: 40px;
     color: rgb(236, 236, 236);
     cursor: pointer;
 }
